--- a/Product Viewer/Base.lproj/Main.storyboard
+++ b/Product Viewer/Base.lproj/Main.storyboard
@@ -58,6 +58,58 @@
             </objects>
             <point key="canvasLocation" x="964.12213740458014" y="-2.1126760563380285"/>
         </scene>
+        <!--Product DetailsVC-->
+        <scene sceneID="pe8-s7-5h5">
+            <objects>
+                <viewController storyboardIdentifier="productDetailsVC" id="8T5-Pt-abq" customClass="ProductDetailsVC" customModule="Product_Viewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="AUC-Gp-Mls">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" preservesSuperviewLayoutMargins="YES" text="Suave Kids Double Dutch Apple Detangling Spray, 10.5 oz" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumScaleFactor="0.75" translatesAutoresizingMaskIntoConstraints="NO" id="ohA-xF-5Cc">
+                                <rect key="frame" x="16" y="63" width="361" height="118"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="94" id="AH7-Jh-lzX"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D4x-Py-TSs">
+                                <rect key="frame" x="8" y="189" width="191" height="191"/>
+                                <color key="backgroundColor" name="Secondary Color"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="191" id="1gA-jm-Hos"/>
+                                    <constraint firstAttribute="height" constant="191" id="5e1-UV-lFU"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="ber-c8-vbQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ohA-xF-5Cc" firstAttribute="top" secondItem="ber-c8-vbQ" secondAttribute="top" constant="4" id="AF2-xC-8cY"/>
+                            <constraint firstItem="ber-c8-vbQ" firstAttribute="trailing" secondItem="ohA-xF-5Cc" secondAttribute="trailing" constant="16" id="BZb-Af-4Ex"/>
+                            <constraint firstItem="ohA-xF-5Cc" firstAttribute="leading" secondItem="ber-c8-vbQ" secondAttribute="leading" constant="16" id="Lqz-Pd-PoG">
+                                <variation key="heightClass=compact-widthClass=compact" constant="220"/>
+                            </constraint>
+                            <constraint firstItem="D4x-Py-TSs" firstAttribute="top" relation="lessThanOrEqual" secondItem="ber-c8-vbQ" secondAttribute="top" constant="130" id="XjY-cU-45i">
+                                <variation key="heightClass=compact-widthClass=compact" constant="8"/>
+                            </constraint>
+                            <constraint firstItem="D4x-Py-TSs" firstAttribute="leading" secondItem="ber-c8-vbQ" secondAttribute="leading" constant="16" id="nYW-te-WtF">
+                                <variation key="heightClass=regular-widthClass=compact" constant="8"/>
+                            </constraint>
+                            <constraint firstItem="D4x-Py-TSs" firstAttribute="top" secondItem="ohA-xF-5Cc" secondAttribute="bottom" constant="8" symbolic="YES" id="t3k-iV-h3I"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="productImage" destination="D4x-Py-TSs" id="khx-uT-mZs"/>
+                        <outlet property="productName" destination="ohA-xF-5Cc" id="98i-UG-FAz"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iXH-HW-NMP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1809.9236641221373" y="-8.4507042253521139"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Fv5-Qv-tSD">
             <objects>
@@ -81,6 +133,9 @@
     <resources>
         <namedColor name="AccentColor">
             <color red="0.2196078431372549" green="0.2196078431372549" blue="0.2196078431372549" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Secondary Color">
+            <color red="1" green="0.69411764705882351" blue="0.20392156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
