--- a/Product Viewer/Base.lproj/Main.storyboard
+++ b/Product Viewer/Base.lproj/Main.storyboard
@@ -27,6 +27,10 @@
                                     <inset key="sectionInset" minX="10" minY="5" maxX="10" maxY="5"/>
                                 </collectionViewFlowLayout>
                                 <cells/>
+                                <connections>
+                                    <outlet property="dataSource" destination="8bC-Xf-vdC" id="ieg-oI-uYx"/>
+                                    <outlet property="delegate" destination="8bC-Xf-vdC" id="QKu-B5-sV0"/>
+                                </connections>
                             </collectionView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="p9k-6C-1MP">
                                 <rect key="frame" x="0.0" y="103" width="393" height="56"/>
